# tcl2cl

./: .dir-locals.el  .envrc  .gitignore  .guix-channel  Makefile.am  README.org  Resources.org  bootstrap  configure.ac  guix.scm  tcl2cl.asd
.guix/modules/: tcl2cl-package.scm
doc/: local.mk  tcl2cl.texi
source/: tcl2cl.lisp
tests/: example.lisp
